k3s/rancher-demo/envy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo
  labels:
    app.kubernetes.io/name: rancher-demo
spec:
  rules:
    - host: "rancher-demo.k3s.example.home"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rancher-demo
                port:
                  number: 80
